--- a/_site.yml
+++ b/_site.yml
@@ -6,8 +6,8 @@ navbar:
       href: GR_graphs.html
     - text: "What next?"
       href: ReadNext.html
-    - text: "Low priority"
-      href: LowPriority.html
+    - text: "To Find"
+      href: ToFind.html
 output_dir: "docs"
 output:
   html_document:
